--- a/conf/nginx/nginx.conf
+++ b/conf/nginx/nginx.conf
@@ -1,30 +1,24 @@
-user  nginx;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*;
+user              www-data;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 
 events {
-    worker_connections 10000;
-    use epoll;
-    multi_accept on;
+    worker_connections  1024;
 }
 
 http {
-    include /etc/nginx/mime.types;
-    include /etc/nginx/conf.d/mixins/real-ip.conf;
-    include /etc/nginx/conf.d/mixins/gzip.conf;
-    include /etc/nginx/conf.d/mixins/settings.conf;
-    include /etc/nginx/sites-enabled/*.conf;
+    default_type       application/octet-stream;
+    sendfile           on;
+    keepalive_timeout  65;
 
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     '$status $body_bytes_sent "$http_referer" '
     '"$http_user_agent" "$http_x_forwarded_for"';
-        
-    access_log /var/log/nginx/access.log main;
-    error_log /var/log/nginx/error.log warn;
-  
-    map $http_x_forwarded_proto $fastcgi_https {
-        default off;
-        https on;
-    }
+    access_log         /var/log/nginx/access.log main;
+    error_log          /var/log/nginx/error.log warn;
+    
+    include            /etc/nginx/mime.types;
+    include            /etc/nginx/sites-enabled/*.conf;
 }
