--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,32 @@
 version: "3"
 
 services:
-  nginx:
-    image: "nginx:latest"
+  build:
+    image: golang:1.20-alpine
+    working_dir: /usr/src/app
     volumes:
-      - ./conf/nginx/conf.d:/etc/nginx/conf.d
-      - ./conf/nginx/sites-available:/etc/nginx/sites-available
-      - ./conf/nginx/sites-enabled:/etc/nginx/sites-enabled
-      - ./conf/nginx/nginx.conf:/etc/nginx/nginx.conf
+      - .:/usr/src/app
+    command: sh -c "apk --no-cache --quiet add make && make tools deps package && touch /tmp/healthy"
+    healthcheck:
+      test: ["CMD-SHELL", "cat", "/tmp/healthy"]
+      interval: 10s
+      timeout: 1s
+      retries: 5
+  nginx:
+    build: .
+    image: vhost:latest
+    restart: always
+    depends_on:
+      build:
+        condition: service_completed_successfully
+    volumes:
       - ./bin:/usr/local/bin
+      - ./dist:/usr/local/dist
     ports:
       - "80:80"
       - "443:443"
-  varnish:
-    image: "varnish:latest"
-    volumes:
-      - ./conf/varnish/default.vcl:/etc/varnish/default.vcl
+    healthcheck:
+      test: ["CMD-SHELL", "nginx", "-t"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
