Fixing demo with goreleaser

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     working_dir: /usr/src/app
     volumes:
       - .:/usr/src/app
-    command: sh -c "apk --no-cache --quiet add git make && make tools deps package && touch /tmp/healthy"
+    command: sh -c "apk --no-cache --quiet add git make && make tools deps package-snapshot && touch /tmp/healthy"
     healthcheck:
       test: ["CMD-SHELL", "cat", "/tmp/healthy"]
       interval: 10s
